spacing fixed

--- a/styles/_app.scss
+++ b/styles/_app.scss
@@ -495,6 +495,7 @@ $footer-padding: 3rem 1em 3rem 1rem;
 
     .title {
         font-size: 3rem;
+        margin-bottom: 3rem;
         color: $z-brown;
         font-family: $z-header-font;
         text-align: center;
